# cswitch

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: claude_config.rs  cli.rs  error.rs  keychain.rs  main.rs  oauth.rs  profile.rs
src/commands/: add.rs  current.rs  emit_key.rs  import.rs  init.rs  list.rs  mod.rs  remove.rs  update.rs  use_profile.rs
