[package]
name = "cswitch"
version = "0.1.0"
edition = "2021"
description = "CLI to switch between Anthropic/Claude accounts"
license = "MIT"
repository = "https://github.com/theodaguier/cswitch"
keywords = ["claude", "anthropic", "cli", "account-switcher"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "linux-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dialoguer = "0.11"
colored = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
oauth = ["dep:reqwest", "dep:tokio", "dep:sha2", "dep:base64", "dep:rand"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.rand]
version = "0.8"
optional = true
